[package]
name = "net-toolkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "net_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
ipnetwork  = "0.20"
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
