[package]
name = "net-toolkit"
version = "1.1.0"
edition = "2021"
description = "IT运维工具箱"

[[bin]]
name = "net-toolkit"
path = "src/main.rs"

[lib]
name = "net_toolkit_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
dirs = "6"
parking_lot = "0.12"
regex = "1"
xdb-parse = "0.2"
hostname = "0.4"
os_info = "3"
trust-dns-resolver = "0.23"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
aes = "0.8"
des = "0.8"
cipher = "0.4"
digest = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"        # optimize for size over speed
lto = "fat"            # link-time optimization
codegen-units = 1      # per-function optimization
strip = "symbols"      # strip all symbols
panic = "abort"        # remove unwind tables

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
